# lexe

./: .copier-answers-py.yaml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  env-config.yaml  hatch.toml  mise.toml  noxfile.py  pip-audit-ignore.txt  pyproject.toml  readme.md  ruff.toml
.github/workflows/: nox.yaml
ci/: .gitignore
examples/: lexe.yaml
examples/flask/: .flaskenv  Dockerfile  app.py  compose.override.yaml  compose.server.yaml  compose.yaml  juke.prod.yaml  juke.qa.yaml  juke.yaml  lexe.yaml  pyproject.toml
examples/flask/hooks/: log_event.py
examples/hello/: Dockerfile  compose.server.yaml  compose.yaml  lexe.yaml
examples/hello/deploy/: ssh_known_hosts
spec/: 2026-04-18-create-lexe-opus-eval.md  2026-04-18-create-lexe.md  2026-04-19-create-lexe-review.md  2026-04-19-deploy.md  2026-04-19-provision.md  2026-04-19-ssh-mods.md  deploy-secrets-example.sh  doist-server  push-host-secrets.py  todo.md
src/: lexe_tasks_lib.py
src/lexe/: cli.py  config.py  deploy.py  exc.py  procs.py  provision.py  remote.py  status.py
tasks/: bootstrap  bump  mise-uv-init.py
tests/: conftest.py
tests/lexe_tests/: conftest.py  test_cli.py  test_config.py  test_deploy.py  test_examples.py  test_procs.py  test_provision.py  test_status.py
tests/lexe_tests/configs/: basic.yaml  hooks.yaml  hooks2.yaml  project-missing.yaml  services-empty.yaml  services-missing.yaml
